another swagger fix
